added card section with responsive

--- a/index.html
+++ b/index.html
@@ -55,7 +55,36 @@
             </div>
         </section>
     </header>
-    <main></main>
+    <!-- main section start -->
+    <main>
+        <!-- card section start -->
+        <section class="card-section">
+           <div class="container">
+                <div class="card-text">
+                    <h2 class="h2-tag">Online Games <span class="span-text">Funny Videos</span></h2>
+                    <p class="p-tag">A Collection of Hilarious Videos to Brighten Your Day</p>
+                </div>
+                <div class="card-img-container">
+                    <div class="card">
+                        <img src="images/Rectangle 4.png" alt="">
+                        <p class="p-tag">A Collection of Hilarious Videos to Brighten Your Day</p>
+                    </div>
+                    <div class="card">
+                        <img src="images/Rectangle 5.png" alt="">
+                        <p class="p-tag">Did you score? #unblockedgames #school</p>
+                    </div>
+                    <div class="card">
+                        <img src="images/Rectangle 7.png" alt="">
+                        <p class="p-tag">Breaking game records like OG</p>
+                    </div>
+                    <div class="card">
+                        <img src="images/Rectangle 6.png" alt="">
+                        <p class="p-tag">Busted gaming on school laptop, but you are still lit.</p>
+                    </div>
+                </div>
+           </div>
+        </section>
+    </main>
     <footer></footer>
 </body>
 </html>
