--- a/index.html
+++ b/index.html
@@ -84,6 +84,23 @@
                 </div>
            </div>
         </section>
+        <!-- play-instantly section -->
+        <section class="play-instantly-section">
+            <div class="container">
+                <div class="play-instantly">
+                    <div class="text-area">
+                        <h2 class="h2-tag">Play Instantly, <br> <span class="span-text">No Downloads, No Installs.</span></h2>
+                        <p class="p-tag">Play games online for free without downloading. Just click the Play button and play instantly in your browser.</p>
+                    </div>
+                    <div class="img-area">
+                        <img src="images/Rectangle 55.png" alt="">
+                        <div class="img-badge">
+                            <img src="images/Rectangle 66.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer></footer>
 </body>
