--- a/index.html
+++ b/index.html
@@ -102,6 +102,43 @@
             </div>
         </section>
     </main>
-    <footer></footer>
+    <!-- footer section start -->
+    <footer>
+        <div class="container">
+            <div class="logo">
+                <img src="images/Frame.png" alt="logo">
+                <h3 class="logo-text"><span class="color-pink">G</span>amer</h3>
+            </div>
+            <div class="link-item">
+                <ul>
+                    <li><a href="#">Our Story</a></li>
+                    <li><a href="#">Games</a></li>
+                    <li><a href="#">Web Games</a></li>
+                    <li><a href="#">Careers</a></li>
+                    <li><a href="#">Support</a></li>
+                    <li><a href="#">My Account</a></li>
+                </ul>
+            </div>
+            <div class="social-links">
+                <ul>
+                    <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-behance"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-apple"></i></a></li>
+                </ul>
+            </div>
+            <div class="privacy-links">
+                <ul>
+                    <li><a href="#">Terms and Conditions</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Cookie Policy</a></li>
+                    <li><a href="#">Privacy Settings</a></li>
+                </ul>
+            </div>
+            <p class="copyright">Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</p>
+        </div>
+    </footer>
 </body>
 </html>
