--- a/index.html
+++ b/index.html
@@ -101,6 +101,67 @@
                 </div>
             </div>
         </section>
+        <!-- button section start -->
+        <section class="group-buttons">
+            <div class="container">
+                <ul class="button-list">
+                    <li class="button-list-items">
+                        <a href="#" class="button-list-link">
+                            <img src="images/Rectangle 11.png" alt="">
+                            <p>Action Games</p>
+                        </a>
+                    </li>
+                    <li class="button-list-items">
+                        <a href="#" class="button-list-link">
+                            <img src="images/Rectangle 12.png" alt="">
+                            <p>Adventure Games</p>
+                        </a>
+                    </li>
+                    <li class="button-list-items">
+                        <a href="#" class="button-list-link">
+                            <img src="images/Rectangle 13.png" alt="">
+                            <p>Arcade Games</p>
+                        </a>
+                    </li>
+                    <li class="button-list-items">
+                        <a href="#" class="button-list-link">
+                            <img src="images/Rectangle 14.png" alt="">
+                            <p>Education Games</p>
+                        </a>
+                    </li>
+                    <li class="button-list-items">
+                        <a href="#" class="button-list-link">
+                            <img src="images/Rectangle 15.png" alt="">
+                            <p>Word Games</p>
+                        </a>
+                    </li>
+                    <li class="button-list-items">
+                        <a href="#" class="button-list-link">
+                            <img src="images/Rectangle 16.png" alt="">
+                            <p>Role Plying Games</p>
+                        </a>
+                    </li>
+                    <li class="button-list-items">
+                        <a href="#" class="button-list-link">
+                            <img src="images/Rectangle 17.png" alt="">
+                            <p>Music & Audio Games</p>
+                        </a>
+                    </li>
+                    <li class="button-list-items">
+                        <a href="#" class="button-list-link">
+                            <img src="images/Rectangle 18.png" alt="">
+                            <p>Puzzle Games</p>
+                        </a>
+                    </li>
+                    <li class="button-list-items">
+                        <a href="#" class="button-list-link">
+                            <img src="images/Rectangle 19.png" alt="">
+                            <p>Strategy Games</p>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </section>
     </main>
     <!-- footer section start -->
     <footer>
